--- a/index.html
+++ b/index.html
@@ -41,13 +41,19 @@
               <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
+              <a class="nav-link js-scroll-trigger" href="#aboutme">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">ES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">FR</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">NL</a>
             </li>
           </ul>
         </div>
@@ -65,7 +71,7 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <p class="text-intro mb-5">Welcome to my page. I'm Edgar, a PhD candidate on innovation governance at TU Eindhoven.</p>
-            <p class="text-intro mb-5">More coming soon...   </p>
+            <p class="text-intro mb-5">More coming soon... (still working on the site, sorry for the incomplete information) </p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#resume">Find Out More</a>
           </div>
         </div>
@@ -79,13 +85,14 @@
             <h2 class="section-heading text-white">Resume</h2>
             <hr class="light my-4">
             <div class="row">
-              <div class="text-white col-lg-6"><h4>Work experience</h3>
+              <div class="text-white col-lg-6"><h4>Work experience</h4>
                 <div class="text-resume">
                   <p>2015-19: <b>PhD candidate</b>, TU Eindhoven.</p>
                   <p>2011-13: <b>Senior consultant</b>, Propuesta Cívica.</p>
                 </div>
+                 <hr>
               </div>
-              <div class="text-white col-lg-6"><h4>Education</h3>
+              <div class="text-white col-lg-6"><h4>Education</h4>
                 <div class="text-resume">
                   <p>2013-'15: <b>MSc Innovation Sciences</b>, TU Eindhoven.</p>
                   <p>2008-'13: <b>BSc International Relations</b>, National University of Mexico.</p>
@@ -93,17 +100,20 @@
                 </div>
               </div>
             </div>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <hr class="light my-4">
+            <div class="text-white col-lg-12"><h4>Skills</h4>
+            </div>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Download CV  <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="services">
+    <section id="aboutme">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">At Your Service</h2>
+            <h2 class="section-heading">About me</h2>
             <hr class="my-4">
           </div>
         </div>
@@ -112,163 +122,68 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+              <i class="fa fa-4x fa-book text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Read</h3>
+              <p class="text-muted mb-0">I like to read,I recently opened a goodreads account and I have a blog.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Ready to Ship</h3>
-              <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
+              <i class="fa fa-4x fa-cutlery text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Food</h3>
+              <p class="text-muted mb-0">I love food, both cooking and eating.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+              <i class="fa fa-4x fa-language text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Languages</h3>
+              <p class="text-muted mb-0">Language lover, but not the most proficient learner: EN & ES (C1-C2), NL (B2), & FR (A2).</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+              <i class="fa fa-4x fa-gamepad text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Gamer</h3>
+              <p class="text-muted mb-0">Yes. I spend hours per week playing video-games and boardgames.</p>
             </div>
           </div>
         </div>
       </div>
     </section>
-
-    <section class="p-0" id="blog"> <!--Originally portfolio-->
-      <div class="container-fluid p-0">
-        <div class="row no-gutters popup-gallery">
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="bg-dark text-white">
-      <div class="container text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
-      </div>
-    </section>
-
-    <section id="contact">
+ 
+    <section  class="bg-dark text-white" id="contact">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
+          <div class="col-lg-4 mx-auto text-center">
             <h2 class="section-heading">Let's get in touch!</h2>
             <hr class="my-4">
-            <p class="mb-5">You can reach via the following channels: </p>
+            <p class="mb-5">You can reach via the following: </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>123-456-6789</p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
-            <p>
-              <a href="mailto:esgirones@gmail.com">E-mail me!</a>
-            </p>
-          </div>
+        <div class="row"> 
+            <a href="mailto:esgirones@gmail.com" class="col-lg-1 col-md-1 col-sm-4 col-6 ml-auto text-center">
+              <i class="fa fa-envelope-open fa-3x mb-3 sr-contact"></i>
+            </a>
+            <a href="https://facebook.com/esgirones" class="col-lg-1 col-md-1 col-sm-4 col-6 ml-auto text-center">
+              <i class="fa fa-facebook-square fa-3x mb-3 sr-contact" href="https://www.facebook.com"></i>
+            </a>
+            <a href="https://github.com/esgirones" class="col-lg-1 col-md-1 col-sm-4 col-6 ml-auto text-center">
+              <i class="fa fa-github fa-3x mb-3 sr-contact"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/esgirones" class="col-lg-1 col-md-1 col-sm-4 col-6 ml-auto text-center">
+              <i class="fa fa-linkedin-square fa-3x mb-3 sr-contact"></i>
+            </a>
+            <a href="https://twitter.com/egirones" class="col-lg-1 col-md-1 col-sm-4 col-6 ml-auto text-center">
+              <i class="fa fa-twitter fa-3x mb-3 sr-contact"></i>
+            </a>
+            <a href="https://www.instagram.com/egirones/" class="col-lg-1 col-md-1 col-sm-4 col-6 ml-auto text-center">
+              <i class="fa fa-instagram fa-3x mb-3 sr-contact"></i>
+            </a>
         </div>
       </div>
     </section>
+    <p>Cover photo by Vipul Mathur</p>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
